Room : As an administrator I want there to be a way to add new rooms with guests inside it[#186231955]
